== Git

* Bug fixes

  * Ensure the previous pages params aren't passed through redirect
  * Labels should only search for fields within the current scope (Kyle Hargraves)

== 0.4.0 / 2009-01-18

* _IMPORTANT_ Breaking change:

  * Removed init.rb auto-require of webrat/rails
  * Removed auto-require of webrat/rails when requiring webrat when RAILS_ENV is
    defined

  In your env.rb or test_helper.rb file, ensure you have something like:

    require "webrat"

    Webrat.configure do |config|
      config.mode = :rails
    end

* Major enhancements

  * Major improvements to Webrat::Selenium (Many contributors listed here)
  * Add assert_* methods for using Webrat's matchers w/o RSpec (Mike Gaffney, Amos King)
  * Added Webrat.configure method for Webrat configuration [#33] (Mike Gaffney)
  * Added select_time, select_date, and select_datetime to API. [#36] (Ben Mabey)
  * Use Hpricot and REXML when not parsing with Nokogiri (on JRuby, for example)

* Minor enhancements

  * Added Selenium grid configuration and support. (Amos King && Cornel Borcean)
  * Support passing an ActiveRecord model to #within when in Rails mode [#68] (Luke Melia)
  * Make assert_* matchers in rails mode increment the assertions count [#123] (Amos King)
  * Added assert_* matchers to selenium matchers [#110] (Amos King)
  * Added assert_contain, assert_not_contain [#86] (Mike Gaffney, Amos King)
  * Add configuration options for the Selenium environment and port (Kieran Pilkington)
  * Maximize the browser window after initializing Selenium (Luke Melia)
  * Better inspect output for Webrat elements
  * Sets the Webrat mode with Configuration#mode= in the config block [#85] (Mike Gaffney)
  * Detect if the document is XML or HTML using the Content-Type when in Rails mode
  * Expose #selenium method for direct access to Selenium client
  * Check nokogiri gem version before requiring nokogiri
  * Include the Selenium server jar file in the gem (Bryan Helmkamp, Ben Schwarz)