@@ -2,6 +2,7 @@
 
 * Bug fixes
 
+  * Update query param parsing to work with latest Edge Rails
   * Ensure the previous pages params aren't passed through redirect
   * Labels should only search for fields within the current scope (Kyle Hargraves)
 
